# mna

./: README.ipynb  README.md  example.ipynb  pyproject.toml
.github/workflows/: ci.yml
mna/: adj.py
mna/element/: __init__.py  active.py  base.py  passive.py
mna/netlist/: data.py  parser.py  solver.py
tests/: conftest.py  test_parser.py  test_solver.py
