[tool.poetry]
name = "mna"
version = "0.1.0"
description = ""
authors = ["Nathan Graule <solarliner@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.8,^3.10,^3.11"
sympy = "^1.11.1"
parsec = "^3.15"


[tool.poetry.group.dev.dependencies]
black = "^22.10.0"
matplotlib = "^3.6.2"
jupyter = "^1.0.0"
pytest = "^7.2.0"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
